src/components/layout.css
body {
    font-family: Colfaxx,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
    color: #333;
    margin: 20px;
    overflow-x: hidden;
}

@media (min-width: 992px) {
    body{
        font-size: 150%;
    }
    .underline {
        font-size: 150%;
    }
}

@media (max-width: 992px) {
    .underline {
        font-size: 110%;
    }
}


.contained {
    max-width: 960px;
    margin: auto;
}

.section {
    padding: 2rem 0 2rem 0
}

.underline {
    border-radius: 0 !important;
    background-color: inherit !important;
    border-top: 0px;
    border-left: 0px;
    border-right: 0px;
    border-bottom: 5px solid transparent !important;
    transition: border-bottom 0.3s,  color 0.3s !important;
    color: white;
    font-weight: 700;
    padding-bottom: 1rem;
    padding-top: 1rem;
}

.underline:hover {
    border-bottom-color: #FFF874 !important;
    color: #FFF874;
}

.centered {
    text-align: center;
    margin: auto;
}

.blueButton {
    color: white !important;
    background-color: #3f51b5 !important;
    font-weight: 700 !important;
    font-size: large !important;
    border: none;
    padding: 1rem;
    font-size: 150%;
    transition: color 0.3s !important;
}

.blueButton:hover {
    cursor: pointer;
    /* background:  #3f51b5; */
    color: #FFF874 !important;
}

